--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.png">
+    <title>Arnav Gupta</title>
+    <link rel="icon" type="image/x-icon" href="/images/favcon removebg.png">
     <link rel="stylesheet" href="styles.css">
+    
     <script src="js/controller.js"></script>
 </head>
 
@@ -77,25 +78,10 @@
                             <li><span>Software Developer (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
                         </ul>
                     </div>
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
     </div>
-<script>
-    var tablinks = document.getElementsByClassName("tab-links");
-    var tabcontents = document.getElementsByClassName("tab-contents");
-
-    function opentab(tabname){
-        for(tablink of tablinks){
-            tablink.classList.remove("active-link");
-        }
-        for(tabcontent of tabcontents){
-            tabcontent.classList.remove("active-tab");
-        }
-        event.currentTarget.classList.add("active-link");
-        document.getElementById(tabname).classList.add("active-tab");
-    }
-</script>
 </body>
 </html>
