--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <!-- https://michalsnik.github.io/aos/ -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/aos.js"></script>
+    
     
     <script src="js/controller.js"></script>
 </head>
 
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">  
-    <script> AOS.init(); </script>
+   
 
     <div id="header">
         <div class="prevent-select" id="binary-background"></div>
@@ -189,7 +189,7 @@
 </section>
 
 <!-- portfolio section -->
-<section id="portfolio">
+<section id="portfolio" style="padding-top: 5%;">
     <div class="container">
         <div class="row">
             <div class="col-4">
@@ -202,7 +202,7 @@
                         <span>To learn more about these activities, click below and download my resume. <br><br></span>
                     </div>
                    <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
-                   <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="/Arnav Gupta Resume Software Developer.pdf" frameborder="0" style="width: 100%; height: 50vh;"></iframe>
+                   <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav Gupta Resume Software Developer.pdf" frameborder="0" style="width: 100%; height: 50vh;"></iframe>
                 </div>
             </div>
             <div class="col-7">
@@ -324,7 +324,7 @@
 
 <!-- Contact Section -->
 
-    <div id="contact" class="container">
+    <div id="contact" class="container" style="padding-top: 15%;">
         <div class="row">
             <div class="col-4">
                 <h1 class="sub-title" data-aos="zoom-in-right" > Contact Me</h1>
@@ -441,6 +441,8 @@
     </div>
   </div>
 </div>
+
+<script> AOS.init(); </script>
 
 </body>
 </html>
