--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arnav Gupta</title>
-    <link rel="icon" type="image/x-icon" href="/images/favcon2.png?">
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favcon2.png"> -->
+    <link rel="icon" href="/images/favcon2.png">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Bootstrap -->
