updated for flemington, nj

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="col-4">
                 <h1 class="sub-title" data-aos="zoom-in-right" > Contact Me</h1>
                 <p style="color: gray" data-aos="zoom-in-right" data-aos-duration="900">arnavkg@gmail.com</p>
-                <p style="color: gray" data-aos="zoom-in-right" data-aos-duration="900">908-801-0387</p>
+                <p style="color: gray" data-aos="zoom-in-right" data-aos-duration="900">Flemington, New Jersey</p>
                 <div class="social-icons" data-aos="zoom-in-right" data-aos-duration="900">
                     <a href="mailto:arnavkgu@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                     <a href="https://twitter.com/ArnavGu44946931" target="_blank"><i class="fab fa-twitter-square"></i></a>
