updated for favicon

--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!-- 
-    Things needed to add:
-       X make the skills section with animated progress bars
-        whole website with animations
-       X contact me have button disabled at start
-        fix the nav bar for portfolio
-        icons with website
- -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arnav Gupta</title>
     <!-- <link rel="icon" type="image/x-icon" href="/images/favcon2.png"> -->
-    <link rel="icon" href="/images/favcon2.png">
+    <link rel="icon" href="/images/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Bootstrap -->
