--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <div class="tab-contents" id="volunteering">
                         <ul>
                             <li><span><span class="tab-contents-role">Volunteer and Mentor</span> (May 2020 - Aug 2022)</span><br>ENGin</li>
-                            <li><span><span class="tab-contents-role">Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
+                            <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
                             <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sep 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
                             <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Dec 2022)</span><br>FIRST LEGO League</li>
                             <li><span><span class="tab-contents-role">Volunteer</span>  (Apr 2023 - Present)</span><br>Hunterdon Outreach Programs</li>
