--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arnav Gupta</title>
     <!-- <link rel="icon" type="image/x-icon" href="/images/favcon2.png"> -->
-    <link rel="icon" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Bootstrap -->
@@ -206,104 +206,107 @@
                         <p class ="tab-links" onclick="opentab('experience')">Experience</p>
                         <p class ="tab-links" onclick="opentab('skills')">Skills</p>
                     </div>
-                    <div class="tab-contents active-tab" id="activities" data-aos="fade-up" data-aos-duration="1500">
-                        <ul>
-                            <li><span><span class="tab-contents-role"> Founder and President</span> (Oct 2022 - Present)</span><br>Developer Code Club</li>
-                            <li><span><span class="tab-contents-role">Vice President</span> (Sep 2022 - Present)</span><br>Investment Club </li>
-                            <li><span><span class="tab-contents-role">Programming Captain </span>(Sep 2021 - Present)</span><br>Robotics Club Team 3637 </li>
-                            <li><span><span class="tab-contents-role">Recording Secretary</span> (Sep 2021 - Present)</span><br>National Speech & Debate Association</li>
-                            <li><span><span class="tab-contents-role">Active Member & Mentor</span> (Sep 2022 - Present)</span><br>Connect Club</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="volunteering">
-                        <ul>
-                            <li><span><span class="tab-contents-role">Volunteer and Mentor</span> (May 2020 - Aug 2022)</span><br>ENGin</li>
-                            <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
-                            <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sep 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
-                            <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Dec 2022)</span><br>FIRST LEGO League</li>
-                            <li><span><span class="tab-contents-role">Volunteer</span>  (Apr 2023 - Present)</span><br>Hunterdon Outreach Programs</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id = "experience">
-                        <ul>
-                            <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
-                            <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Present)</span><br>AiGoLearning</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id = "skills">
-                        <div class="row">
-                            <div class="col-4">
-                                <span>CSS</span>
-                                <div class="progress">
-                                    <div id="css" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <span>HTML</span>
-                                <div class="progress">
-                                    <div id="html" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <span>Java</span>
-                                <div class="progress">
-                                    <div id="java" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
+                    <div data-aos="fade-up" data-aos-duration="1500">
+                        <div class="tab-contents active-tab" id="activities" >
+                            <ul>
+                                <li><span><span class="tab-contents-role"> Founder and President</span> (Oct 2022 - Present)</span><br>Developer Code Club</li>
+                                <li><span><span class="tab-contents-role">Vice President</span> (Sep 2022 - Present)</span><br>Investment Club </li>
+                                <li><span><span class="tab-contents-role">Programming Captain </span>(Sep 2021 - Present)</span><br>Robotics Club Team 3637 </li>
+                                <li><span><span class="tab-contents-role">Recording Secretary</span> (Sep 2021 - Present)</span><br>National Speech & Debate Association</li>
+                                <li><span><span class="tab-contents-role">Active Member & Mentor</span> (Sep 2022 - Present)</span><br>Connect Club</li>
+                            </ul>
                         </div>
-                        <div class="row">
-                            <div class="col-4">
-                                <span>Communication</span>
-                                <div class="progress">
-                                    <div id="communication" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <span>Leadership</span>
-                                <div class="progress">
-                                    <div id="leadership" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <span>MySQL/SQL</span>
-                                <div class="progress">
-                                    <div id="sql" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
+                        <div class="tab-contents" id="volunteering">
+                            <ul>
+                                <li><span><span class="tab-contents-role">Volunteer and Mentor</span> (May 2020 - Aug 2022)</span><br>ENGin</li>
+                                <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
+                                <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sep 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
+                                <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Dec 2022)</span><br>FIRST LEGO League</li>
+                                <li><span><span class="tab-contents-role">Volunteer</span>  (Apr 2023 - Present)</span><br>Hunterdon Outreach Programs</li>
+                            </ul>
                         </div>
+                        <div class="tab-contents" id = "experience">
+                            <ul>
+                                <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
+                                <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Present)</span><br>AiGoLearning</li>
+                            </ul>
+                        </div>
+                    
+                        <div class="tab-contents" id = "skills">
+                            <div class="row">
+                                <div class="col-4">
+                                    <span>CSS</span>
+                                    <div class="progress">
+                                        <div id="css" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>HTML</span>
+                                    <div class="progress">
+                                        <div id="html" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Java</span>
+                                    <div class="progress">
+                                        <div id="java" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-4">
+                                    <span>Communication</span>
+                                    <div class="progress">
+                                        <div id="communication" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Leadership</span>
+                                    <div class="progress">
+                                        <div id="leadership" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>MySQL/SQL</span>
+                                    <div class="progress">
+                                        <div id="sql" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                            </div>
 
-                        <div class="row">
-                            <div class="col-4">
-                                <span>Git/Github</span>
-                                <div class="progress">
-                                    <div id="git" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                            <div class="row">
+                                <div class="col-4">
+                                    <span>Git/Github</span>
+                                    <div class="progress">
+                                        <div id="git" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>JavaScript</span>
+                                    <div class="progress">
+                                        <div id="js" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>C++</span>
+                                    <div class="progress">
+                                        <div id="cpp" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-4">
-                                <span>JavaScript</span>
-                                <div class="progress">
-                                    <div id="js" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
-                            <div class="col-4">
-                                <span>C++</span>
-                                <div class="progress">
-                                    <div id="cpp" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <span>Google API</span>
-                                <div class="progress">
-                                    <div id="googleapi" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <span>Google API</span>
+                                    <div class="progress">
+                                        <div id="googleapi" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <span>Visual Studio Code</span>
-                                <div class="progress">
-                                    <div id="vscode" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                <div class="col-sm-6">
+                                    <span>Visual Studio Code</span>
+                                    <div class="progress">
+                                        <div id="vscode" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -379,7 +382,6 @@
 
 <div class="copyright">
     <p>Copyright © Arnav Gupta. Made by a High School Student</p>
-    
 </div>
 
 <script>
@@ -392,6 +394,7 @@
       fetch(scriptURL, { method: 'POST', body: new FormData(form)})
         .then(response => {
             hideSpinner();
+            msg.style.color = "#569e49";
             msg.innerHTML = "Message sent successfully"
             $('#submitBtn').prop('disabled', true);
             setTimeout(() => {
@@ -402,20 +405,6 @@
         .catch(error => console.error('Error!', error.message))
     })
   </script>
-
-<!-- <div class="row">
-    <div class="col-md-4">
-        <div class="service p-4 bg-base rounded">
-            <div class="iconbox">
-                    <i class="las la-feather"></i>
-            </div>
-            <h4>Branding</h4>
-            <p>I have done a lot of stuff</p>
-            <a href="#" class="link-custom"> Read More</a>
-        </div>
-    </div>  
-</div> -->
-
 
 <!-- Toast  -->
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
