some updates for moblie

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section id="home" style="height: 100vh;">
             
             <div class="container custom-col" style="margin-left: 10%;">
-                <div class="row">
+                <div id="home-header" class="row">
                     <div class="col-lg-6">
                         <ul class="list-inline" data-aos="fade-up" data-aos-duration="750">
                             <li class="list-inline-item">
@@ -320,7 +320,7 @@
 
 <!-- Contact Section -->
 
-    <div id="contact" class="container" style="padding-top: 15%;">
+    <div id="contact" class="container">
         <div class="row">
             <div class="col-4">
                 <h1 class="sub-title" data-aos="zoom-in-right" > Contact Me</h1>
