--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="about-col-2" >
                     <h1 data-aos="zoom-in-up" class="sub-title">About Me</h1>
                     <p data-aos="flip-right" data-aos-duration="900">
-                    My Name is Arnav Gupta and I am an incoming Junior at Hunterdon Central Regional High School who is passionate about programming and technology. 
+                    My Name is Arnav Gupta and I am a incoming Junior at Hunterdon Central Regional High School who is passionate about programming and technology. 
                     I believe that these fields have the power to transform the world and I'm excited to be a part of that change.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
@@ -194,7 +194,7 @@
                     </div>
                     <h1 class="sub-title" data-aos="zoom-in-down" data-aos-duration="1000">Portfolio</h1>
                     <div data-aos="zoom-out-right" data-aos-duration="1500">
-                        <span>To learn more about these activities, click below and download my resume. <br><br></span>
+                        <span>To learn more about my activities, click below and download my resume. <br><br></span>
                     </div>
                    <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
                    <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav Gupta Resume Software Developer.pdf" frameborder="0" style="width: 100%; height: 50vh;"></iframe>
