--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -138,7 +141,7 @@
                                 <a href="https://github.com/ArnavGupta23" target="_blank"><i class="fab fa-github"></i></a>
                             </li>
                         </ul>
-                        <p class="fs-3 lead" data-aos="fade-up" data-aos-duration="1000">High School Student</p>
+                        <p id="element" class="fs-3 lead" data-aos="fade-up" data-aos-duration="1000"></p>
                         <h1 class="display-3" data-aos="fade-up" data-aos-duration="1500">Hello, I'm <a id="style-2" data-replace="Arnav Gupta"><span>Arnav Gupta</span></a></h1>
                         
                         <div id="header-aboutbtn" class="d-flex" data-aos="fade-up" data-aos-duration="2000">
@@ -152,6 +155,21 @@
                 <img data-aos="zoom-in-left" data-aos-duration="900" src="images/arnavmainpic.jpg" alt="img" class = "side-image">
         </section>
     </div>
+
+    <!-- Setup and start animation! -->
+    <!-- https://github.com/mattboldt/typed.js -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+        var typed = new Typed('#element', {
+        strings: ['A High School Student ', 'A Programmer', 'An Instructor', 'A Student', 'A Mentor', 'A Junior', 'A Leader', 'A Computer Science Teacher', 'A Tutor', 'A Software Developer', 'A Learner'],
+        typeSpeed: 70, 
+        backSpeed: 60,
+        // startDelay: 1000,
+        loop: true, 
+        loopCount: Infinity, 
+        // shuffle: true, 
+        });
+    </script>
 
     <!-- needed to call SmallScreen once created all elements -->
     <script>SmallScreen();</script>
