--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arnav Gupta</title>
     <!-- <link rel="icon" type="image/x-icon" href="/images/favcon2.png"> -->
-    <link rel="icon" type="image/png" href="/images/favicon-32x32.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.ico">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Bootstrap -->
