update for backDelay

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         strings: ['A High School Student ', 'A Programmer', 'An Instructor', 'A Student', 'A Mentor', 'A Junior', 'A Leader', 'A Computer Science Teacher', 'A Tutor', 'A Software Developer', 'A Learner'],
         typeSpeed: 70, 
         backSpeed: 60,
-        // startDelay: 1000,
+        backDelay: 1200,
         loop: true, 
         loopCount: Infinity, 
         // shuffle: true, 
