--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
                                 <a href="https://github.com/ArnavGupta23" target="_blank"><i class="fab fa-github"></i></a>
                             </li>
                         </ul>
-                        <p id="element" class="fs-3 lead" data-aos="fade-up" data-aos-duration="1000"></p>
+                        <div data-aos="fade-up" data-aos-duration="1000">
+                            <!--<span class="fs-3 lead">A</span>
+                             <p id="element" class="fs-3 lead" style="color:#e99133; text-decoration: underline;"></p> -->
+                            <p id="element" class="fs-3 lead"></p>
+                        </div>
                         <h1 class="display-3" data-aos="fade-up" data-aos-duration="1500">Hello, I'm <a id="style-2" data-replace="Arnav Gupta"><span>Arnav Gupta</span></a></h1>
                         
                         <div id="header-aboutbtn" class="d-flex" data-aos="fade-up" data-aos-duration="2000">
@@ -155,7 +159,7 @@
         </section>
     </div>
 
-    <!-- Setup and start animation! -->
+    <!-- Setup and start animation -->
     <!-- https://github.com/mattboldt/typed.js -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
