--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                         <!-- <h1 class="sub-title">Portfolio</h1> -->
                     </div>
                     <h1 class="sub-title" data-aos="zoom-in-down" data-aos-duration="1000">Portfolio</h1>
-                    <div data-aos="zoom-out-right" data-aos-duration="1500">
-                        <span>To learn more about my activities, click below and download my resume. <br><br></span>
+                    <div id="portfolio-span" data-aos="zoom-out-right" data-aos-duration="1500">
+                        <span >To learn more about my activities, click below and download my resume. <br><br></span>
                     </div>
                    <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
                    <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav Gupta Resume Software Developer.pdf" frameborder="0" style="width: 100%; height: 50vh;"></iframe>
