--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="Arnav Gupta, Hunterdon, CS, Computer Science, Flemington, NJ, Hunterdon County, Technology, New Jersey, United States, US">
+    <meta name="description" content="Personal Biography about Arnav Gupta">
+    <meta name="author" content="Arnav Gupta">
+
     <title>Arnav Gupta</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
