updates for skills

--- a/index.html
+++ b/index.html
@@ -293,9 +293,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-4">
-                                    <span>Communication</span>
+                                    <span> Protocols</span>
                                     <div class="progress">
-                                        <div id="communication" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                        <div id="protocols" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
                                     </div>
                                 </div>
                                 <div class="col-4">
@@ -334,16 +334,43 @@
                             </div>
 
                             <div class="row">
-                                <div class="col-sm-6">
+                                <div class="col-4">
                                     <span>Google API</span>
                                     <div class="progress">
                                         <div id="googleapi" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
-                                    <span>Visual Studio Code</span>
+                                <div class="col-4">
+                                    <span>VS Code</span>
                                     <div class="progress">
                                         <div id="vscode" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>AWS</span>
+                                    <div class="progress">
+                                        <div id="aws" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-4">
+                                    <span>Azure</span>
+                                    <div class="progress">
+                                        <div id="azure" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Docker</span>
+                                    <div class="progress">
+                                        <div id="docker" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Node.js</span>
+                                    <div class="progress">
+                                        <div id="node" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
                                     </div>
                                 </div>
                             </div>
