--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta name="author" content="Arnav Gupta">
 
     <title>Arnav Gupta</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
 
     <!-- favicon test -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
