--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            
+                            <div class="row mt-2">
                                 <div class="col-4">
                                     <span> Protocols</span>
                                     <div class="progress">
@@ -314,7 +315,7 @@
                                 </div>
                             </div>
 
-                            <div class="row">
+                            <div class="row mt-2">
                                 <div class="col-4">
                                     <span>Git/Github</span>
                                     <div class="progress">
@@ -335,7 +336,7 @@
                                 </div>
                             </div>
 
-                            <div class="row">
+                            <div class="row mt-2">
                                 <div class="col-4">
                                     <span>Google API</span>
                                     <div class="progress">
@@ -356,7 +357,7 @@
                                 </div>
                             </div>
 
-                            <div class="row">
+                            <div class="row mt-2">
                                 <div class="col-4">
                                     <span>Azure</span>
                                     <div class="progress">
@@ -373,6 +374,27 @@
                                     <span>Node.js</span>
                                     <div class="progress">
                                         <div id="node" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row mt-2">
+                                <div class="col-4">
+                                    <span>jQuery</span>
+                                    <div class="progress">
+                                        <div id="jquery" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Express.js</span>
+                                    <div class="progress">
+                                        <div id="express" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>EJS</span>
+                                    <div class="progress">
+                                        <div id="ejs" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
                                     </div>
                                 </div>
                             </div>
