--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <div class="tab-contents" id = "experience">
                             <ul>
                                 <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
-                                <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Present)</span><br>AiGoLearning</li>
+                                <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Present)</span><br>AIGoLearning</li>
                             </ul>
                         </div>
                     
