--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                                 <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
                                 <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sep 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
                                 <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Dec 2022)</span><br>FIRST LEGO League</li>
+                                <li><span><span class="tab-contents-role">Member</span> (Dec 2022 - Present)</span><br>Staff All Star Committee</li>
                                 <li><span><span class="tab-contents-role">Volunteer</span>  (Apr 2023 - Present)</span><br>Hunterdon Outreach Programs</li>
                             </ul>
                         </div>
