update for for date AI

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             <ul>
                                 <li><span><span class="tab-contents-role">Volunteer and Mentor</span> (May 2020 - Aug 2022)</span><br>ENGin</li>
                                 <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
-                                <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sep 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
+                                <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sept 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
                                 <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Dec 2022)</span><br>FIRST LEGO League</li>
                                 <li><span><span class="tab-contents-role">Volunteer</span>  (Apr 2023 - Present)</span><br>Hunterdon Outreach Programs</li>
                             </ul>
@@ -281,7 +281,7 @@
                         <div class="tab-contents" id = "experience">
                             <ul>
                                 <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
-                                <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Present)</span><br>AIGoLearning</li>
+                                <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Sept 2023)</span><br>AIGoLearning</li>
                             </ul>
                         </div>
                     
