updates for about me section

--- a/index.html
+++ b/index.html
@@ -216,14 +216,16 @@
                     <img src="images/arnavsuit.jpg">
                 </div>
                 <div class="about-col-2" >
-                    <h1 data-aos="zoom-in-up" class="sub-title">About Me</h1>
+                    <h1 data-aos="zoom-in-up" class="sub-title">👋 Hey there,</h1>
+                    <!-- <h1 data-aos="zoom-in-up" class="sub-title-context center">It's nice to meet you </h1> -->
+
                     <p data-aos="flip-right" data-aos-duration="900">
-                    My Name is Arnav Gupta and I am a incoming Junior at Hunterdon Central Regional High School who is passionate about programming and technology. 
-                    I believe that these fields have the power to transform the world and I'm excited to be a part of that change.
+                    My Name is Arnav Gupta and I am a Junior at  <span style="color: rgb(230, 69, 69);">Hunterdon Central Regional High School</span> who is <span style="color: rgb(141, 230, 69);">passionate</span> about <span style="color: rgb(69, 171, 230);">programming and technology.</span> 
+                    I believe that these fields have the power to transform the world, and I'm excited to be a part of that change.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
-                    In school, I strive to excel in subjects like mathematics, science, and computer science, as they provide a strong foundation for my programming journey. 
-                    One of my favorite aspects of programming is the ability to collaborate with like-minded individuals.
+                    In school, I strive to excel in subjects like <span style="color: rgb(69, 171, 230);">mathematics, science, and computer science</span>, as they provide a strong foundation for my programming journey. 
+                    One of my favorite aspects of programming is the ability to <span style="color: rgb(230, 123, 69);">collaborate</span> with like-minded individuals.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
                     In my free time, I love to engage with my friends and family. I also play basketball and golf daily, and I always try to improve my game. Lastly, I love to self improve by working out.
