updates for about btn

--- a/index.html
+++ b/index.html
@@ -178,11 +178,17 @@
                         </div>
                         <h1 class="display-3" data-aos="fade-up" data-aos-duration="1500">Hello, I'm <a id="style-2" data-replace="Arnav Gupta"><span>Arnav Gupta</span></a></h1>
                         
-                        <div id="header-aboutbtn" class="d-flex" data-aos="fade-up" data-aos-duration="2000">
+
+                        <div class="btn-group" role="group" aria-label="Basic example" data-aos="fade-up" data-aos-duration="2000">
+                            <a href="#about" class="btn btn-outline-light mr-3 p-2">About Me</a>
+                            <a href="#about" class="btn btn-outline-light p-2"><i class="fas fa-caret-right"></i></a>
+                          </div>
+
+                        <!-- <div id="header-aboutbtn" class="d-flex" data-aos="fade-up" data-aos-duration="2000">
                             <a href="#about" class="btn btn-outline-light mr-3 p-2">About Me</a>
                             
                             <a href="#about" class="btn btn-outline-light p-2"><i class="fas fa-caret-right"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
