--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <img src="images/arnavsuit.jpg">
                 </div>
                 <div class="about-col-2" >
-                    <h1 data-aos="zoom-in-up" class="sub-title"><span class="wave">👋🏽</span> Hey there,</h1>
+                    <h1 data-aos="zoom-in-up" class="sub-title"> Hi There! <span class="wave">👋🏽</span></h1>
                     <!-- <h1 data-aos="zoom-in-up" class="sub-title-context center">It's nice to meet you </h1> -->
 
                     <p data-aos="flip-right" data-aos-duration="900">
