--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                     <div id="portfolio-span" data-aos="zoom-out-right" data-aos-duration="1500">
                         <span >To learn more about my activities, click below and download my resume. <br><br></span>
                     </div>
-                <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
-                <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume-protected.pdf" frameborder="0" style="width: 100%; height: 400px;"></iframe>
+                <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume.pdf" frameborder="0" style="width: 100%; height: 400px;"></iframe>
+                <!-- <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume-protected.pdf" frameborder="0" style="width: 100%; height: 400px;"></iframe> -->
                 </div>
             </div>
             <div class="col-sm-7">
