added AI Human Powered Solutions

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                             <ul>
                                 <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
                                 <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Sep 2023)</span><br>AIGoLearning</li>
+                                <li><span><span class="tab-contents-role">Software Developer Intern</span> (Dec 2024 - Present)</span><br>AI Human Powered Solutions</li>
                             </ul>
                         </div>
                     
