--- a/index.html
+++ b/index.html
@@ -369,6 +369,46 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row mt-2">
+                                <div class="col-4">
+                                    <span>React.js</span>
+                                    <div class="progress">
+                                        <div id="react" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Bootstrap</span>
+                                    <div class="progress">
+                                        <div id="bootstrap" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Websockets</span>
+                                    <div class="progress">
+                                        <div id="websockets" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-2">
+                                <div class="col-4">
+                                    <span>Open AI's API</span>
+                                    <div class="progress">
+                                        <div id="openAI" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Python</span>
+                                    <div class="progress">
+                                        <div id="python" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <span>Angular</span>
+                                    <div class="progress">
+                                        <div id="angular" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
