V1; still needs update with writing

--- a/index.html
+++ b/index.html
@@ -174,15 +174,16 @@
                     <!-- <h1 data-aos="zoom-in-up" class="sub-title-context center">It's nice to meet you </h1> -->
 
                     <p data-aos="flip-right" data-aos-duration="900">
-                    My Name is Arnav Gupta and I am a Junior at  <span style="color: rgb(230, 69, 69);">Hunterdon Central Regional High School</span> who is <span style="color: rgb(141, 230, 69);">passionate</span> about <span style="color: rgb(69, 171, 230);">programming and technology.</span> 
-                    I believe that these fields have the power to transform the world, and I'm excited to be a part of that change.
+                    Hello and welcome to my dedicated space for those considering writing a letter of recommendation on my behalf.
+                    Before delving into the details about my journey and accomplishments, I want to express my sincere gratitude for the time and effort you are dedicating to writing this letter. Your support is invaluable to me. 
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
-                    In school, I strive to excel in subjects like <span style="color: rgb(69, 171, 230);">mathematics, science, and computer science</span>, as they provide a strong foundation for my programming journey. 
-                    One of my favorite aspects of programming is the ability to <span style="color: rgb(230, 123, 69);">collaborate</span> with like-minded individuals.
+                    As I look towards the future, I'm eager to work in the Software Industry and eventually start a business. 
+                    A letter of recommendation from esteemed educators and professionals like you would be invaluable in advancing towards these goals.
+                    This page is a testament to my journey so far, and I hope it serves as a comprehensive overview of my qualifications and character.
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
-                    In my free time, I love to engage with my friends and family. I also play basketball and golf daily, and I always try to improve my game. Lastly, I love to self improve by working out.
+                    Thank you for considering my request for a letter of recommendation. Your support plays a crucial role in my journey, and I am deeply appreciative of your time and consideration.
                     </p>
                 </div>
             </div>
@@ -204,7 +205,7 @@
                         <span >To learn more about my activities, click below and download my resume. <br><br></span>
                     </div>
                 <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
-                <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume-protected.pdf" frameborder="0" style="width: 110%; height: 400px;"></iframe>
+                <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume.pdf" frameborder="0" style="width: 105%; height: 400px;"></iframe>
             </div>
             </div>
             <div class="col-sm-7">
