updates for new colors

--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
                     <img src="images/arnavsuit.jpg">
                 </div>
                 <div class="about-col-2" >
-                    <h1 data-aos="zoom-in-up" class="sub-title"> Hi There! <span class="wave">👋🏽</span></h1>
+                    <h1 data-aos="zoom-in-up" class="sub-title"> Greetings! <span class="wave">👋🏽</span></h1>
                     <!-- <h1 data-aos="zoom-in-up" class="sub-title-context center">It's nice to meet you </h1> -->
 
                     <p data-aos="flip-right" data-aos-duration="900">
                     Hello and welcome to my dedicated space for those considering writing a letter of recommendation on my behalf.
-                    Before delving into the details about my journey and accomplishments, I want to express my sincere gratitude for the time and effort you are dedicating to writing this letter. Your support is invaluable to me. 
+                    Before delving into the details about my journey and accomplishments, I deeply appreciate the time and effort you're investing in supporting my aspirations. 
                     </p>
                     <p data-aos="flip-right" data-aos-duration="900">
                     As I look towards the future, I'm eager to work in the Software Industry and eventually start a business. 
