added harvard summer school

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                         </div>
                         <div class="tab-contents" id = "experience">
                             <ul>
+                                <li><span><span class="tab-contents-role">Student</span> (June 2024)</span><br>Harvard Summer School</li>
                                 <li><span><span class="tab-contents-role">Software Developer Intern</span> (Dec 2023 - Present)</span><br>AI Human Powered Solutions</li>
                                 <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Sep 2023)</span><br>AIGoLearning</li>
                                 <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Oct 2023)</span><br>FIRST Robotics</li>
@@ -245,7 +246,7 @@
                         </div>
                     
                         <div class="tab-contents" id = "awards">
-                            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500">
+                            <div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500">
                                 <div class="carousel-inner">
                                     <!-- Awards -->
                                     <div class="carousel-item active text-center text-white py-5">
@@ -289,11 +290,11 @@
                                         <h2>Staff/Student All Star Committee</h2>
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
                                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                   <span class="visually-hidden">Next</span>
                                 </button>
