update AI Human Powered Solutions dates

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
                     <h1 class="sub-title" data-aos="zoom-in-down" data-aos-duration="1000">Portfolio</h1>
                     <div id="portfolio-span" data-aos="zoom-out-right" data-aos-duration="1500">
-                        <span >To learn more about my activities, click below and download my resume. <br><br></span>
+                        <span >To learn more about my activities, click below and download my resume. Resume may not be up to date.<br><br></span>
                     </div>
                 <!-- <a href="/Arnav Gupta Resume Software Developer.pdf" download="Arnav Gupta Resume Software Developer"> <i class="fa-solid fa-download fa-2xl" style="color: #ffffff;"></i></a> -->
                 <iframe data-aos="fade-up-right" data-aos-duration="1500" rel="nofollow noopener" src="Arnav_Gupta_Resume.pdf" frameborder="0" style="width: 105%; height: 400px;"></iframe>
@@ -238,7 +238,7 @@
                         <div class="tab-contents" id = "experience">
                             <ul>
                                 <li><span><span class="tab-contents-role">Student</span> (June 2024)</span><br>Harvard Summer School</li>
-                                <li><span><span class="tab-contents-role">Software Developer Intern</span> (Dec 2023 - Present)</span><br>AI Human Powered Solutions</li>
+                                <li><span><span class="tab-contents-role">Software Developer Intern</span> (Dec 2023 - Mar 2024)</span><br>AI Human Powered Solutions</li>
                                 <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Sep 2023)</span><br>AIGoLearning</li>
                                 <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Oct 2023)</span><br>FIRST Robotics</li>
                                 <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
